--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCGjM6YpPdHNm_uCA6upIe3IXrL9Z3syW4",
-      authDomain: "abcd-64055.firebaseapp.com",
-      projectId: "abcd-64055",
-      storageBucket: "abcd-64055.appspot.com",
-      messagingSenderId: "73026865615",
-      appId: "1:73026865615:web:b6e0927abbfb71c66aeaba"
+      apiKey: "test",
+      authDomain: "test.firebaseapp.com",
+      projectId: "test-64055",
+      storageBucket: "test",
+      messagingSenderId: "test",
+      appId: "test"
     };
 
     // Initialize Firebase
